feat:refactor to multmodule maven project. closes #15